[package]
name = "astronaut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
select = "0.5"
url = "2.2"
regex = "1.5"
structopt = "0.3"
